5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1764_762.log
== TEST (2019-05-23 09:47:59) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
print(data[:2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 09:50:32) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
print(data[:2],"de",data[2:4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 09:51:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
print(data[:2],"de",data[2:4],"de",data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:09:06) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
print(data[:2],"de",data[2:4],"de",data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:37:41) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
print(data[:2],"de",data[2:4],"de",data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:37:49) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
print(data[:2],"de",data[2:4],"de",data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:11:03) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
print(data[:2],"de",data[2:4],"de",data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:11:13) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
print(data[:2],"de",data[2:4],"de",data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:21:27) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:1])
mes = int(data[2:4])
ano = int(data[4:])
print(data[:2],"de",data[2:4],"de",data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:22:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:1])
mes = int(data[2:4])
ano = int(data[4:])
print(dia,"de",mes,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:23:08) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = (data[2:4])
ano = int(data[4:])
print(dia,"de",mes,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:23:13) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = (data[2:4])
ano = int(data[4:])
print(dia,"de",mes,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:33:26) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

cont = 0
while(cont < size(vm)):
	if(mes >=1 and mes <=12):
		mes = vm[cont]
		cont = cont + 1
		mes = mes + 1 
	
	
print(dia,"de",mes,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:34:33) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = str(data[2:4])
ano = int(data[4:])

cont = 0
while(cont < size(vm)):
	if(mes >= 1 and mes <=12):
		mes = vm[cont]
		cont = cont + 1
		mes = mes + 1 
	
	
print(dia,"de",mes,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:36:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = str(data[2:4])
ano = int(data[4:])

cont = 0
while(cont < size(vm)):
	if(mes >= "1" and mes <= "12"):
		mes = vm[cont]
		cont = cont + 1
		mes = mes + 1 
	
	
print(dia,"de",mes,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:36:41) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = str(data[2:4])
ano = int(data[4:])

cont = 0
while(cont < size(vm)):
	if(mes >= "1" and mes <= "12"):
		mes = int(mes)
		mes = vm[cont]
		cont = cont + 1
		mes = mes + 1 
	
	
print(dia,"de",mes,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:46:41) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes == 1 ):
	mess = vm[0]
elif(mes == 2):
	mess = vm[1]
elif(mes == 3 ):
	mess = vm[2]
elif(mes == 4 ):
	mess = vm[3]
elif(mes == 5 ):
	mess = vm[4]
elif(mes == 6 ):
	mess = vm[5]
elif(mes == 7 ):
	mess = vm[6]
elif(mes == 8 ):
	mess = vm[7]
elif(mes == 9 ):
	mess = vm[8]
elif(mes == 10 ):
	mess = vm[9]
elif(mes == 11 ):
	mess = vm[10]
elif(mes == 12 ):
	mess = vm[10]
print(dia,"de",mess,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:47:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes == 1 ):
	mess = vm[0]
elif(mes == 2):
	mess = vm[1]
elif(mes == 3 ):
	mess = vm[2]
elif(mes == 4 ):
	mess = vm[3]
elif(mes == 5 ):
	mess = vm[4]
elif(mes == 6 ):
	mess = vm[5]
elif(mes == 7 ):
	mess = vm[6]
elif(mes == 8 ):
	mess = vm[7]
elif(mes == 9 ):
	mess = vm[8]
elif(mes == 10 ):
	mess = vm[9]
elif(mes == 11 ):
	mess = vm[10]
elif(mes == 12 ):
	mess = vm[10]
print(dia,"de",mess,"de",ano)
-- EXECUTION TIME:
0.598016
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:47:03) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes == 1 ):
	mess = vm[0]
elif(mes == 2):
	mess = vm[1]
elif(mes == 3 ):
	mess = vm[2]
elif(mes == 4 ):
	mess = vm[3]
elif(mes == 5 ):
	mess = vm[4]
elif(mes == 6 ):
	mess = vm[5]
elif(mes == 7 ):
	mess = vm[6]
elif(mes == 8 ):
	mess = vm[7]
elif(mes == 9 ):
	mess = vm[8]
elif(mes == 10 ):
	mess = vm[9]
elif(mes == 11 ):
	mess = vm[10]
elif(mes == 12 ):
	mess = vm[10]
print(dia,"de",mess,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:47:29) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes == 1 ):
	mess = vm[0]
elif(mes == 2):
	mess = vm[1]
elif(mes == 3 ):
	mess = vm[2]
elif(mes == 4 ):
	mess = vm[3]
elif(mes == 5 ):
	mess = vm[4]
elif(mes == 6 ):
	mess = vm[5]
elif(mes == 7 ):
	mess = vm[6]
elif(mes == 8 ):
	mess = vm[7]
elif(mes == 9 ):
	mess = vm[8]
elif(mes == 10 ):
	mess = vm[9]
elif(mes == 11 ):
	mess = vm[10]
elif(mes == 12 ):
	mess = vm[10]
print(dia,"de",mess,"de",ano)
-- EXECUTION TIME:
0.311227
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:47:32) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes == 1 ):
	mess = vm[0]
elif(mes == 2):
	mess = vm[1]
elif(mes == 3 ):
	mess = vm[2]
elif(mes == 4 ):
	mess = vm[3]
elif(mes == 5 ):
	mess = vm[4]
elif(mes == 6 ):
	mess = vm[5]
elif(mes == 7 ):
	mess = vm[6]
elif(mes == 8 ):
	mess = vm[7]
elif(mes == 9 ):
	mess = vm[8]
elif(mes == 10 ):
	mess = vm[9]
elif(mes == 11 ):
	mess = vm[10]
elif(mes == 12 ):
	mess = vm[10]
print(dia,"de",mess,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:48:08) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes == 1 ):
	mess = vm[0]
elif(mes == 2):
	mess = vm[1]
elif(mes == 3 ):
	mess = vm[2]
elif(mes == 4 ):
	mess = vm[3]
elif(mes == 5 ):
	mess = vm[4]
elif(mes == 6 ):
	mess = vm[5]
elif(mes == 7 ):
	mess = vm[6]
elif(mes == 8 ):
	mess = vm[7]
elif(mes == 9 ):
	mess = vm[8]
elif(mes == 10 ):
	mess = vm[9]
elif(mes == 11 ):
	mess = vm[10]
elif(mes == 12 ):
	mess = vm[10]
print(dia,"de",mess,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:49:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes <= 1 and mes <=12):
	if(mes == 1 ):
		mess = vm[0]
	elif(mes == 2):
		mess = vm[1]
	elif(mes == 3 ):
		mess = vm[2]
	elif(mes == 4 ):
		mess = vm[3]
	elif(mes == 5 ):
		mess = vm[4]
	elif(mes == 6 ):
		mess = vm[5]
	elif(mes == 7 ):
		mess = vm[6]
	elif(mes == 8 ):
		mess = vm[7]
	elif(mes == 9 ):
		mess = vm[8]
	elif(mes == 10 ):
		mess = vm[9]
	elif(mes == 11 ):
		mess = vm[10]
	elif(mes == 12 ):
		mess = vm[10]
print(dia,"de",mess,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:50:12) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes <= 1 and mes <=12):
	if(mes == 1 ):
		mess = vm[0]
	elif(mes == 2):
		mess = vm[1]
	elif(mes == 3 ):
		mess = vm[2]
	elif(mes == 4 ):
		mess = vm[3]
	elif(mes == 5 ):
		mess = vm[4]
	elif(mes == 6 ):
		mess = vm[5]
	elif(mes == 7 ):
		mess = vm[6]
	elif(mes == 8 ):
		mess = vm[7]
	elif(mes == 9 ):
		mess = vm[8]
	elif(mes == 10 ):
		mess = vm[9]
	elif(mes == 11 ):
		mess = vm[10]
	elif(mes == 12 ):
		mess = vm[10]
print(dia,"de",mess,"de",ano)
-- EXECUTION TIME:
0.563464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 33, in <module>
    print(dia,"de",mess,"de",ano)
NameError: name 'mess' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:50:24) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes <= 1 and mes <=12):
	if(mes == 1 ):
		mess = vm[0]
	elif(mes == 2):
		mess = vm[1]
	elif(mes == 3 ):
		mess = vm[2]
	elif(mes == 4 ):
		mess = vm[3]
	elif(mes == 5 ):
		mess = vm[4]
	elif(mes == 6 ):
		mess = vm[5]
	elif(mes == 7 ):
		mess = vm[6]
	elif(mes == 8 ):
		mess = vm[7]
	elif(mes == 9 ):
		mess = vm[8]
	elif(mes == 10 ):
		mess = vm[9]
	elif(mes == 11 ):
		mess = vm[10]
	elif(mes == 12 ):
		mess = vm[10]
print(dia,"de",mess,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:05:26) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes <= 1 and mes <=12):
	if(mes == 1 ):
		mess = vm[0]
	elif(mes == 2):
		mess = vm[1]
	elif(mes == 3 ):
		mess = vm[2]
	elif(mes == 4 ):
		mess = vm[3]
	elif(mes == 5 ):
		mess = vm[4]
	elif(mes == 6 ):
		mess = vm[5]
	elif(mes == 7 ):
		mess = vm[6]
	elif(mes == 8 ):
		mess = vm[7]
	elif(mes == 9 ):
		mess = vm[8]
	elif(mes == 10 ):
		mess = vm[9]
	elif(mes == 11 ):
		mess = vm[10]
	elif(mes == 12 ):
		mess = vm[10]
print(dia,"de",mess,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:06:06) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes <= 1 and mes <=12):
	if(mes == 1 ):
		mess = vm[0]
	elif(mes == 2):
		mess = vm[1]
	elif(mes == 3 ):
		mess = vm[2]
	elif(mes == 4 ):
		mess = vm[3]
	elif(mes == 5 ):
		mess = vm[4]
	elif(mes == 6 ):
		mess = vm[5]
	elif(mes == 7 ):
		mess = vm[6]
	elif(mes == 8 ):
		mess = vm[7]
	elif(mes == 9 ):
		mess = vm[8]
	elif(mes == 10 ):
		mess = vm[9]
	elif(mes == 11 ):
		mess = vm[10]
	elif(mes == 12 ):
		mess = vm[10]
print(dia,"de",mess,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:07:08) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes <= 1 and mes <=12):
	if(mes == 1 ):
		mess = vm[0]
	elif(mes == 2):
		mess = vm[1]
	elif(mes == 3 ):
		mess = vm[2]
	elif(mes == 4 ):
		mess = vm[3]
	elif(mes == 5 ):
		mess = vm[4]
	elif(mes == 6 ):
		mess = vm[5]
	elif(mes == 7 ):
		mess = vm[6]
	elif(mes == 8 ):
		mess = vm[7]
	elif(mes == 9 ):
		mess = vm[8]
	elif(mes == 10 ):
		mess = vm[9]
	elif(mes == 11 ):
		mess = vm[10]
	elif(mes == 12 ):
		mess = vm[10]
print(dia,"de",mess,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:07:31) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if(mes <= 1 and mes <=12):
	if(mes == 1 ):
		mess = vm[0]
	elif(mes == 2):
		mess = vm[1]
	elif(mes == 3 ):
		mess = vm[2]
	elif(mes == 4 ):
		mess = vm[3]
	elif(mes == 5 ):
		mess = vm[4]
	elif(mes == 6 ):
		mess = vm[5]
	elif(mes == 7 ):
		mess = vm[6]
	elif(mes == 8 ):
		mess = vm[7]
	elif(mes == 9 ):
		mess = vm[8]
	elif(mes == 10 ):
		mess = vm[9]
	elif(mes == 11 ):
		mess = vm[10]
	elif(mes == 12 ):
		mess = vm[10]
print(dia,"de",mess,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:21:51) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

mess = mes - 1
mes1 = vm[mess]

print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 14:22:23) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

mess = mes - 1
mes1 = vm[mess]

print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.512992
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:24:23) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 31)):
mess = mes - 1
mes1 = vm[mess]

print(dia,"de",mes1,"de",ano)
-- ERROR:
File "XXXX", line 10
    mess = mes - 1
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:24:34) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 31)):
	mess = mes - 1
	mes1 = vm[mess]

print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:24:45) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 31)):
	mess = mes - 1
	mes1 = vm[mess]

print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:25:06) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 31)):
	mess = mes - 1
	mes1 = vm[mess]

print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 14:25:22) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 31)):
	mess = mes - 1
	mes1 = vm[mess]

print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.51395
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:26:24) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 31)):
	mess = mes - 1
	mes1 = vm[mess]

print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:28:43) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 31)):
	mess = mes - 1
	mes1 = vm[mess]

print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:30:15) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 30)):
	mess = mes - 1
	mes1 = vm[mess]

print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:38:41) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 30)):
	mess = mes - 1
	mes1 = vm[mess]

print(str(dia),"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 14:39:08) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 30)):
	mess = mes - 1
	mes1 = vm[mess]

print(str(dia),"de",mes1,"de",ano)
-- EXECUTION TIME:
0.466535
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:40:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 30)):
	mess = mes - 1
	mes1 = vm[mess]

print(str(dia,"de",mes1,"de",ano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:41:42) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 30)):
	mess = mes - 1
	mes1 = vm[mess]

print(str(dia,"de",mes1,"de",ano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:42:40) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 30)):
	mess = mes - 1
	mes1 = vm[mess]

print(str(dia),"de",mes1,"de",str(ano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 14:42:58) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])

if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 30)):
	mess = mes - 1
	mes1 = vm[mess]

print(str(dia),"de",mes1,"de",str(ano))
-- EXECUTION TIME:
0.457719
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:46:33) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 30)):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:46:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia  = int(data[:2])
mes = int(data[2:4])
ano = int(data[4:])
if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 30)):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:48:38) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if((mes >= 1 and mes <= 12) and (dia >= 1 and dia <= 30)):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 14:49:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 14:50:09) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.591145
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:19:34) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
